--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./src/styles/styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div id="banner">
-                <img src="/src/images/hero.png" alt="">
+                <img src="/images/hero.png" alt="">
             </div>
         </section>
         <section id="menu">
@@ -101,7 +101,7 @@
                     <div class="dish-heart">
                         <i class="fa-solid fa-heart"></i>
                     </div>
-                    <img src="/src/images/dish.png" class="dish-image" alt="">
+                    <img src="/images/dish.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">lorem Ipson</h3>
 
@@ -127,7 +127,7 @@
                     <div class="dish-heart">
                         <i class="fa-solid fa-heart"></i>
                     </div>
-                    <img src="/src/images/dish2.png" class="dish-image" alt="">
+                    <img src="/images/dish2.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">lorem Ipson</h3>
 
@@ -153,7 +153,7 @@
                     <div class="dish-heart">
                         <i class="fa-solid fa-heart"></i>
                     </div>
-                    <img src="/src/images/dish3.png" class="dish-image" alt="">
+                    <img src="/images/dish3.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">lorem Ipson</h3>
 
@@ -179,7 +179,7 @@
                     <div class="dish-heart">
                         <i class="fa-solid fa-heart"></i>
                     </div>
-                    <img src="/src/images/dish4.png" class="dish-image" alt="">
+                    <img src="/images/dish4.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">lorem Ipson</h3>
 
@@ -203,7 +203,7 @@
             </div>
         </section>
         <section id="testimonials">
-            <img src="/src/images/chef.png" id="testimonial_chef" alt="">
+            <img src="/images/chef.png" id="testimonial_chef" alt="">
 
             <div id="testimonials_content">
                 <h2 class="section-title">
@@ -214,7 +214,7 @@
                 </h3>
                 <div id="feedbacks">
                     <div class="feedback">
-                        <img src="/src/images/avatar.png" class="feedback-avatar" alt="">
+                        <img src="/images/avatar.png" class="feedback-avatar" alt="">
                         <div class="feedback-content">
                             <p>Mamãe
                                 <span>
@@ -230,7 +230,7 @@
                         </div>
                     </div>
                     <div class="feedback">
-                        <img src="/src/images/avatar.png" class="feedback-avatar" alt="">
+                        <img src="/images/avatar.png" class="feedback-avatar" alt="">
                         <div class="feedback-content">
                             <p>Mamãe
                                 <span>
@@ -254,7 +254,7 @@
     </main>
 
     <footer>
-        <img class="footer-img" src="../src/images/wave-dark.svg" alt="">
+        <img class="footer-img" src="/images/wave-dark.svg" alt="">
 
         <div id="footer_items">
             <span id="copyright">
@@ -274,7 +274,7 @@
             </div>
         </div>
     </footer>
-    <script src="/src/javascript/script.js"></script>
+    <script src="/javascript/script.js"></script>
 </body>
 
 </html>
